--- a/DesignerRHN/DesignerRHN-war/web/Comprobante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Comprobante.xhtml
@@ -530,10 +530,36 @@
                                         confirmacionFormatoExtendido.show();"/>
                     </p:dialog>
 
-                    <p:dialog id="confirmacionFormatoExtendido" header="Atención" widgetVar="confirmacionFormatoExtendido"  resizable="false" draggable="false" modal="true" height="182" width="330" style="font-size: 12px" closable="false">  
-                        <h:outputText value="¿Desea ver el formato extendido de liquidación?" style="position: absolute; left: 10px; top: 10px; width: 280px; font-weight:bold;" />
-                        <h:outputText value="Aclaración, el formato extendido requiere haber configurado los operandos en el proceso, en caso de no estar configurado, su valor sera 0." style="position: absolute; left: 10px; top: 30px; width: 280px; font-weight:bold; text-align: justify" />
-                        <p:commandButton value="Si" style="position: absolute; top: 148px; left: 248px" onclick="confirmacionFormatoExtendido.hide();"/>
+                    <p:dialog id="confirmacionFormatoExtendido" header="Atención" widgetVar="confirmacionFormatoExtendido"  resizable="false" draggable="false" modal="true" height="100" width="380" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 10px; top: 15px;"  />
+                        <h:outputText value="¿Desea ver el formato extendido de liquidación?" style="position: absolute; left: 80px; top: 10px; width: 280px; font-weight:bold;" />
+                        <h:outputText value="Aclaración, el formato extendido requiere haber configurado los operandos en el proceso, en caso de no estar configurado, su valor sera 0." style="position: absolute; left: 80px; top: 25px; width: 280px; font-weight:bold; text-align: justify" />
+                        <p:commandButton value="Si" style="position: absolute; top: 75px; left: 280px" actionListener="#{controlComprobantes.verDetallesFormula()}" onclick="confirmacionFormatoExtendido.hide();"/>
+                        <p:commandButton value="No" style="position: absolute; top: 75px; left: 320px" onclick="confirmacionFormatoExtendido.hide();"/>
+                    </p:dialog>
+
+                    <p:dialog id="detallesFormulas" header="Atención" widgetVar="detallesFormulas"  resizable="false" draggable="false" modal="true" height="220" width="505" style="font-size: 12px" closable="false">  
+                        <fieldset style="position: absolute; top: 10px; width: 455px; height: 185px; border-radius: 10px; ">
+                            <legend style="font-size: 12px; font-weight: bold; color: #00F;">Estructura de la formula</legend>
+                            <p:dataTable  id="detalleF" style="font-size: 11px; width: 440px" var="detalleFormula" value="#{controlComprobantes.listaDetallesFormulas}"
+                                          scrollable="true" scrollHeight="127" scrollWidth="455" widgetVar="detalleF" 
+                                          emptyMessage="No se encontraron resultados con el criterio de busqueda."
+                                          rowKey="#{detalleFormula.id}">
+
+                                <p:column  headerText="Valor" width="80" style="padding: 0px">  
+                                    <p:inputText value="#{detalleFormula.valor}" style="border-radius: 0px; width: 87%" />  
+                                </p:column>  
+
+                                <p:column headerText="Formula" style="padding: 0px">  
+                                    <p:inputText value="#{detalleFormula.nombreNodo}" style="border-radius: 0px; width: 94.5%"/>  
+                                </p:column>  
+
+                                <p:column headerText="Descripción" style="padding: 0px">  
+                                    <p:inputText value="#{detalleFormula.descripcion}" style="border-radius: 0px; width: 94.5%"/>  
+                                </p:column> 
+                            </p:dataTable>
+                            <p:commandButton value="Aceptar" style="position: absolute; top: 163px; left: 378px" onclick="detallesFormulas.hide();"/>
+                        </fieldset>
                     </p:dialog>
                 </h:form>
                 <h:form id="formExportar">
