Edwin Hastamorir 30 de octubre de 2013 Modificación de la ubicación de la pantalla page1.xhtml Queda pendiente desarrollar la pantalla vigenciaaficion.xhtml.

--- a/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
@@ -346,7 +346,7 @@
                                 <h:outputText value="Deporte" style="position: absolute; left: 47px; font-weight: bold; color: #14388B; top: 50px" />
                                 <p:inputText id="deporte" value="#{controlEmpleadoIndividual.deportesP}" readonly="true" style="position: absolute; left: 45px; top: 63px; width: 140px"/>
 
-                                <p:commandButton id="btnAficiones" value="" style="background-image: url(Imagenes/aficion.gif); background-size: 100% 100%; background-repeat: no-repeat; width: 35px; height: 38px; position: absolute; top: 10px; left: 218px " process="@this"/>
+                                <p:commandButton id="btnAficiones" value="" style="background-image: url(Imagenes/aficion.gif); background-size: 100% 100%; background-repeat: no-repeat; width: 35px; height: 38px; position: absolute; top: 10px; left: 218px " action="vigenciaaficion" process="@this"/>
                                 <h:outputText value="Aficiones" style="position: absolute; left: 258px; font-weight: bold; color: #14388B; top: 10px;" />
                                 <p:inputText id="aficiones" value="#{controlEmpleadoIndividual.aficionesP}" readonly="true" style="position: absolute; left: 256px; top: 23px; width: 140px"/>
 
