--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -184,7 +184,7 @@
                                             TIPOS CONTRATOS: Observe y/o ingrese todos los tipos<br/> de contratos que el empleado ha tenido con la empresa
                                         </p:tooltip>
 
-                                        <p:commandButton id="NormaLaboral" value="" style="position: absolute; background-image: url(Imagenes/normalaboral.gif); width: 29px; height: 35px; top: 87px;left: 10px; background-repeat: no-repeat; background-size: 100% 100%;" disabled="#{controlRemoto.acumulado}" action="aficiones"/>
+                                        <p:commandButton id="NormaLaboral" value="" style="position: absolute; background-image: url(Imagenes/normalaboral.gif); width: 29px; height: 35px; top: 87px;left: 10px; background-repeat: no-repeat; background-size: 100% 100%;" disabled="#{controlRemoto.acumulado}" action="normalaboral"/>
                                         <p:tooltip style="font-size: 12px" for="NormaLaboral">
                                             NORMAS LABORALES: Observe y/o ingrese <br/>la(s) norma(s) laboral(es) del empleado.
                                         </p:tooltip>
