--- a/DesignerRHN/DesignerRHN-war/web/page1.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/page1.xhtml
@@ -132,7 +132,7 @@
                         <p:commandButton value="Cancelar" onclick="editarDescripcion.hide();" style="position: absolute; top: 60px; left: 148px; font-size: 11px" process="@this" actionListener="#{ctrlVigenciasCargos.reiniciarEditar()}"/>
                     </p:dialog>
 
-                    <p:commandButton style="position: absolute; left: 596px; top: 400px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="CANCELAR" value="Atras" action="nomina" />
+                    <p:commandButton style="position: absolute; left: 596px; top: 400px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="CANCELAR" value="Atras" action="vigenciaaficion" />
 
 
                     <p:hotkey bind="ctrl+down"  actionListener="#{ctrlVigenciasCargos.habilitarAgregar()}" process="@this"/> 
